--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -29358,5 +29358,69 @@
         "published": "Mon, 22 Dec 2025 19:55:31 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46358211\">Comments</a>"
+    },
+    {
+        "id": "https://www.minimaxi.com/news/minimax-m21",
+        "title": "MiniMax M2.1: Built for Real-World Complex Tasks, Multi-Language Programming",
+        "link": "https://www.minimaxi.com/news/minimax-m21",
+        "published": "Fri, 26 Dec 2025 01:02:53 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46388213\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/china-launches-venture-capital-funds-to-invest-in-hard-technology-state-media-report/articleshow/126181327.cms",
+        "title": "China launches venture capital funds to invest in 'hard technology', state media report",
+        "link": "https://economictimes.indiatimes.com/tech/technology/china-launches-venture-capital-funds-to-invest-in-hard-technology-state-media-report/articleshow/126181327.cms",
+        "published": "Fri, 26 Dec 2025 07:44:40 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "China has created three new state-backed venture funds to support hard technology industries. Each fund exceeds 50 billion yuan, focusing on areas like semiconductors rather than online services, aiming to strengthen domestic innovation and long-term industrial capability for future growth."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/india-is-in-talks-to-join-new-pax-silica-group-us-official/articleshow/126177826.cms",
+        "title": "India is in talks to join new Pax Silica Group: US official",
+        "link": "https://economictimes.indiatimes.com/tech/technology/india-is-in-talks-to-join-new-pax-silica-group-us-official/articleshow/126177826.cms",
+        "published": "Fri, 26 Dec 2025 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Speaking to Bloomberg in the US, Helberg also indicated the participation of the European Union and Taiwan in the global supply chain agreement for critical minerals. He also revealed the US will be attending the IndiaAI Impact Summit to be hosted in Delhi next year in February."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/taiwans-mediatek-is-open-to-sourcing-more-india-chips/articleshow/126177812.cms",
+        "title": "Taiwan\u2019s MediaTek is open to sourcing more India chips",
+        "link": "https://economictimes.indiatimes.com/tech/technology/taiwans-mediatek-is-open-to-sourcing-more-india-chips/articleshow/126177812.cms",
+        "published": "Fri, 26 Dec 2025 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "\u201cIf local consumption and manufacturing of chips grow, and the ecosystem becomes robust enough to support cost-effective production, it would make strong business sense to shift more assembly or manufacturing to India,\u201d Anku Jain, managing director of MediaTek India, told ET here on Wednesday."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/information-tech/ltimindtree-saw-60m-in-h1-incremental-revenue-via-agentic-ai-says-chief-executive/articleshow/126177741.cms",
+        "title": "LTIMindtree saw $60 million in H1 incremental revenue via agentic AI, says CEO",
+        "link": "https://economictimes.indiatimes.com/tech/information-tech/ltimindtree-saw-60m-in-h1-incremental-revenue-via-agentic-ai-says-chief-executive/articleshow/126177741.cms",
+        "published": "Fri, 26 Dec 2025 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The IT services provider expects short-term headwinds to persist in 2026 when macroeconomic conditions are likely to remain tough for the industry. But there are pockets of optimism as well."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/merchants-crack-qr-code-to-secure-loans-from-nbfcs/articleshow/126176181.cms",
+        "title": "Merchants crack QR code to secure loans from NBFCs",
+        "link": "https://economictimes.indiatimes.com/tech/technology/merchants-crack-qr-code-to-secure-loans-from-nbfcs/articleshow/126176181.cms",
+        "published": "Fri, 26 Dec 2025 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Non-banking finance companies (NBFC) such as Aditya Birla Finance (ABFL), L&amp;T Finance, Poonawala Fincorp, and SMFG India Credit are among those extending credit to small businesses, harnessing the technology backbone offered by payment firms such as BharatPe, Paytm and PhonePe."
+    },
+    {
+        "id": "https://inc42.com/buzz/the-2025-vc-reset-pli-boost-for-ola-electric-more/",
+        "title": "The 2025 VC Reset, PLI Boost For Ola Electric & More",
+        "link": "https://inc42.com/buzz/the-2025-vc-reset-pli-boost-for-ola-electric-more/",
+        "published": "Fri, 26 Dec 2025 02:30:47 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"The 2025 VC Reset, PLI Boost For Ola Electric &amp; More\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/FTR-Daily-Brief-62.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />India\u2019s VCs Hit Reset In 2025 India&#8217;s venture capitalists (VCs) entered 2025 with dry powder piled high. Yet, they still&#8230;"
+    },
+    {
+        "id": "https://inc42.com/features/of-dry-powder-and-wet-blankets-how-indias-vc-hit-reset-in-2025/",
+        "title": "Of Dry Powder And Wet Blankets: How India\u2019s VC Hit Reset In 2025",
+        "link": "https://inc42.com/features/of-dry-powder-and-wet-blankets-how-indias-vc-hit-reset-in-2025/",
+        "published": "Fri, 26 Dec 2025 01:30:28 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Of Dry Powder And Wet Blankets: How India&#039;s VC Hit Reset In 2025\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/FTR-100-2-3.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />As 2025 draws to a close, the contours of India\u2019s venture capital market look clearer than they appeared at the&#8230;"
     }
 ]
