--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -29422,5 +29422,13 @@
         "published": "Fri, 26 Dec 2025 01:30:28 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Of Dry Powder And Wet Blankets: How India&#039;s VC Hit Reset In 2025\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/FTR-100-2-3.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />As 2025 draws to a close, the contours of India\u2019s venture capital market look clearer than they appeared at the&#8230;"
+    },
+    {
+        "id": "https://tiled.art/en/home/?id=SilverAndGold",
+        "title": "Tiled Art",
+        "link": "https://tiled.art/en/home/?id=SilverAndGold",
+        "published": "Fri, 19 Dec 2025 12:00:30 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46324881\">Comments</a>"
     }
 ]
