📚 Auto-update: News data refreshed - 2025-12-26 04:27 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -29430,5 +29430,21 @@
         "published": "Fri, 19 Dec 2025 12:00:30 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46324881\">Comments</a>"
+    },
+    {
+        "id": "https://github.com/ruvnet/wifi-densepose",
+        "title": "WiFi DensePose: WiFi-based dense human pose estimation system through walls",
+        "link": "https://github.com/ruvnet/wifi-densepose",
+        "published": "Fri, 26 Dec 2025 03:18:47 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46388904\">Comments</a>"
+    },
+    {
+        "id": "https://gamingcouch.com",
+        "title": "Show HN: Gaming Couch \u2013 a local multiplayer party game platform for 8 players",
+        "link": "https://gamingcouch.com",
+        "published": "Sun, 21 Dec 2025 13:08:36 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46344573\">Comments</a>"
     }
 ]
