--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -29446,5 +29446,21 @@
         "published": "Sun, 21 Dec 2025 13:08:36 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46344573\">Comments</a>"
+    },
+    {
+        "id": "https://github.com/popovicu/ultimate-linux",
+        "title": "Ultimate-Linux: Userspace for Linux in Pure JavaScript",
+        "link": "https://github.com/popovicu/ultimate-linux",
+        "published": "Fri, 26 Dec 2025 02:32:29 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46388700\">Comments</a>"
+    },
+    {
+        "id": "https://inc42.com/buzz/rajasthan-digifest-x-tie-global-hackathon-draws-700-participants-from-12-states/",
+        "title": "Rajasthan DigiFest X TiE Global Hackathon Draws 700+ Participants From 12 States",
+        "link": "https://inc42.com/buzz/rajasthan-digifest-x-tie-global-hackathon-draws-700-participants-from-12-states/",
+        "published": "Fri, 26 Dec 2025 05:00:26 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Rajasthan DigiFest X TiE Global Hackathon Draws 700+ Participants From 12 States\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/TGS100-article-3.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Rajasthan DigiFest, in collaboration with TiE Global, hosted a Hackathon on December 15 at Vivekananda Global University (VGU) in Jaipur&#8230;"
     }
 ]
