📚 Auto-update: News data refreshed - 2025-12-26 06:18 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -29462,5 +29462,37 @@
         "published": "Fri, 26 Dec 2025 05:00:26 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Rajasthan DigiFest X TiE Global Hackathon Draws 700+ Participants From 12 States\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/TGS100-article-3.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Rajasthan DigiFest, in collaboration with TiE Global, hosted a Hackathon on December 15 at Vivekananda Global University (VGU) in Jaipur&#8230;"
+    },
+    {
+        "id": "https://imgur.com/nUJCI3o",
+        "title": "Rob Pike Goes Nuclear over GenAI",
+        "link": "https://imgur.com/nUJCI3o",
+        "published": "Fri, 26 Dec 2025 05:27:05 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46389444\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/amid-a-battery-boom-and-china-fears-graphite-mining-gets-a-fresh-look-in-the-us-report/articleshow/126184306.cms",
+        "title": "Amid a battery boom and China fears, graphite mining gets a fresh look in the US: Report",
+        "link": "https://economictimes.indiatimes.com/tech/technology/amid-a-battery-boom-and-china-fears-graphite-mining-gets-a-fresh-look-in-the-us-report/articleshow/126184306.cms",
+        "published": "Fri, 26 Dec 2025 11:36:49 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "After years of dormancy, the US is dusting off its graphite mines to tap into the surging demand for this essential battery component. The rise of electric vehicles and technology has sparked a newfound urgency to reduce reliance on foreign sources, particularly from China."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/shutting-shop-a-roundup-of-indian-startups-which-couldnt-survive-2025/articleshow/126182230.cms",
+        "title": "Shutting shop: A roundup of Indian startups which couldn't survive 2025",
+        "link": "https://economictimes.indiatimes.com/tech/startups/shutting-shop-a-roundup-of-indian-startups-which-couldnt-survive-2025/articleshow/126182230.cms",
+        "published": "Fri, 26 Dec 2025 11:11:05 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "India\u2019s startup ecosystem was relatively stable in 2025, with shutdowns falling sharply compared with the previous year and overall numbers continuing to rise. Despite this, several high-profile startups closed due to financial strain, regulation and business model failures. Here\u2019s all the major startups that shut down in 2025."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/lessons-from-unacademys-esop-crisis-design-led-manufacturing-expertise",
+        "title": "Lessons from Unacademy\u2019s ESOP crisis; Design-led manufacturing expertise",
+        "link": "https://yourstory.com/2025/12/lessons-from-unacademys-esop-crisis-design-led-manufacturing-expertise",
+        "published": "Fri, 26 Dec 2025 02:00:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The Unacademy episode is a sectoral stress test highlighting the need for more specific ESOP frameworks. Aimtron operates across high-complexity sectors such as aerospace and defence, electric vehicles, industrial technology, medical devices, and gaming."
     }
 ]
