--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -29494,5 +29494,45 @@
         "published": "Fri, 26 Dec 2025 02:00:00 GMT",
         "source": "YourStory RSS Feed",
         "summary": "The Unacademy episode is a sectoral stress test highlighting the need for more specific ESOP frameworks. Aimtron operates across high-complexity sectors such as aerospace and defence, electric vehicles, industrial technology, medical devices, and gaming."
+    },
+    {
+        "id": "https://geneguessr.brinedew.bio/",
+        "title": "Show HN: GeneGuessr \u2013 a daily biology web puzzle",
+        "link": "https://geneguessr.brinedew.bio/",
+        "published": "Tue, 23 Dec 2025 09:40:37 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46363870\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/chip-startup-groqs-jonathan-ross-will-do-incredible-things-at-nvidia-social-capital-ceo-chamath-palihapitiya/articleshow/126184361.cms",
+        "title": "Chip startup Groq\u2019s Jonathan Ross will do \u2018incredible things\u2019 at Nvidia: Social Capital CEO Chamath Palihapitiya",
+        "link": "https://economictimes.indiatimes.com/tech/technology/chip-startup-groqs-jonathan-ross-will-do-incredible-things-at-nvidia-social-capital-ceo-chamath-palihapitiya/articleshow/126184361.cms",
+        "published": "Fri, 26 Dec 2025 11:52:12 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Chip giant Nvidia has acquired assets and talent from AI startup Groq for $20 billion. This deal brings Groq's specialized inference chip technology to Nvidia. Groq founder Jonathan Ross and key staff will join Nvidia. Groq will continue its cloud business independently under new leadership. This acquisition represents Nvidia's largest transaction ever."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/californias-screenager-classes-show-teens-how-to-navigate-social-media-and-ai/articleshow/126184517.cms",
+        "title": "California\u2019s \u2018Screenager\u2019 classes show teens how to navigate social media and AI",
+        "link": "https://economictimes.indiatimes.com/tech/technology/californias-screenager-classes-show-teens-how-to-navigate-social-media-and-ai/articleshow/126184517.cms",
+        "published": "Fri, 26 Dec 2025 11:50:31 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "California schools are leading the charge in teaching students to identify fake news and deepfakes online. Educators are equipping teenagers with critical thinking skills to navigate social media's challenges. Students learn to verify information and understand algorithmic influences."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/when-esops-turn-real-what-unacademy-moment-means-for-startups",
+        "title": "When ESOPs turn real: what the Unacademy moment means for startups",
+        "link": "https://yourstory.com/2025/12/when-esops-turn-real-what-unacademy-moment-means-for-startups",
+        "published": "Fri, 26 Dec 2025 01:00:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "More than one company\u2019s decision, the Unacademy episode is a sectoral stress test highlighting the need for more specific ESOP frameworks, transparency and employee protections."
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-reach-those-who-matter-tech-policy-medianama/",
+        "title": "Reach those who matter in tech policy on MediaNama",
+        "link": "https://www.medianama.com/2025/12/223-reach-those-who-matter-tech-policy-medianama/",
+        "published": "Fri, 26 Dec 2025 07:01:11 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Reach out and connect with stakeholders and entities that matter in the tech policy domain by advertising with MediaNama. </p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-reach-those-who-matter-tech-policy-medianama/\">Reach those who matter in tech policy on MediaNama</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
