📚 Auto-update: News data refreshed - 2025-12-26 08:16 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -29534,5 +29534,45 @@
         "published": "Fri, 26 Dec 2025 07:01:11 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>Reach out and connect with stakeholders and entities that matter in the tech policy domain by advertising with MediaNama. </p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-reach-those-who-matter-tech-policy-medianama/\">Reach those who matter in tech policy on MediaNama</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.wired.com/story/purple-promo-code/",
+        "title": "Purple Promo Codes and Deals: Up to 30% Off",
+        "link": "https://www.wired.com/story/purple-promo-code/",
+        "published": "Fri, 26 Dec 2025 07:30:00 +0000",
+        "source": "WIRED",
+        "summary": "On the hunt for the perfect mattress (and pillow)? Save on your soon-to-be favorite brand, Purple, with these coupons and deals."
+    },
+    {
+        "id": "https://www.engadget.com/gaming/nintendo/best-microsd-cards-for-nintendo-switch-2-160052947.html?src=rss",
+        "title": "The best microSD cards for the Nintendo Switch 2",
+        "link": "https://www.engadget.com/gaming/nintendo/best-microsd-cards-for-nintendo-switch-2-160052947.html?src=rss",
+        "published": "Fri, 26 Dec 2025 08:00:36 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>If you want to expand the storage of your <a href=\"https://www.engadget.com/gaming/nintendo/switch-2/\">Nintendo Switch 2</a>, you\u2019ll need a microSD Express card. This is <em>not</em> the same as the more traditional <a href=\"https://www.engadget.com/computing/accessories/best-microsd-card-130038282.html\">microSD cards</a> you may have bought for the original Switch or other <a href=\"https://www.engadget.com/gaming/best-handheld-gaming-system-140018863.html\">gaming handhelds</a>; Express cards"
+    },
+    {
+        "id": "https://github.com/thu-ml/TurboDiffusion",
+        "title": "TurboDiffusion: 100\u2013200\u00d7 Acceleration for Video Diffusion Models",
+        "link": "https://github.com/thu-ml/TurboDiffusion",
+        "published": "Fri, 26 Dec 2025 03:19:49 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46388907\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/got-a-gmail-id-that-makes-you-cringe-google-is-finally-letting-you-change-it/articleshow/126186108.cms",
+        "title": "Got a Gmail ID that makes you cringe? Google is finally letting you change it",
+        "link": "https://economictimes.indiatimes.com/tech/technology/got-a-gmail-id-that-makes-you-cringe-google-is-finally-letting-you-change-it/articleshow/126186108.cms",
+        "published": "Fri, 26 Dec 2025 13:27:31 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Google has introduced a long-awaited feature that lets users change their primary Gmail address without creating a new account. Previously, this was not possible for \u201c@gmail.com\u201d users, forcing them to start afresh. The update adds flexibility, while keeping safeguards to prevent misuse and protect linked services."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/how-dimensity-9500-places-mediatek-on-the-flagship-podium/articleshow/126185284.cms",
+        "title": "How Dimensity 9500 places MediaTek on the flagship podium",
+        "link": "https://economictimes.indiatimes.com/tech/technology/how-dimensity-9500-places-mediatek-on-the-flagship-podium/articleshow/126185284.cms",
+        "published": "Fri, 26 Dec 2025 12:43:55 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "MediaTek's Dimensity 9500 signifies a major leap, positioning the company as a leader in flagship SoCs. Built on TSMC's 3nm N3P process, it delivers significant CPU and GPU performance gains, outperforming rivals in real-world tasks like video editing and gaming. This chip is set to define 2025's most capable Android flagships."
     }
 ]
