📚 Auto-update: News data refreshed - 2025-12-26 11:10 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -29654,5 +29654,69 @@
         "published": "Fri, 26 Dec 2025 09:24:20 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>Italy's competition regulator has barred Meta from excluding rival AI chatbots on WhatsApp. Meanwhile, Meta has decided to appeal against it.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-italys-competition-authority-meta-chatgpt-perplexity-whatsapp/\">Italy&#8217;s Competition Authority Stops Meta From Excluding ChatGPT And Perplexity On WhatsApp</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.wired.com/story/expired-tired-wired-constitutional-sheriffs/",
+        "title": "\u2018We Ain\u2019t Seen Nothing Yet\u2019\u2014Trump\u2019s Mass Deportations Will Only Grow From Here",
+        "link": "https://www.wired.com/story/expired-tired-wired-constitutional-sheriffs/",
+        "published": "Fri, 26 Dec 2025 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Militias and far-right extremists believed they would be central to Trump\u2019s mass deportation plans. Instead he militarized law enforcement agencies."
+    },
+    {
+        "id": "https://www.wired.com/review/hp-zbook-8-gli-14-inch/",
+        "title": "HP ZBook 8 Gli 14-Inch Review: An Unimpressive Workstation",
+        "link": "https://www.wired.com/review/hp-zbook-8-gli-14-inch/",
+        "published": "Fri, 26 Dec 2025 10:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Billed as a workstation (and priced accordingly), HP\u2019s Zbook 8 falls short of dazzling."
+    },
+    {
+        "id": "https://nadrieril.github.io/blog/2025/12/21/the-algebra-of-loans-in-rust.html",
+        "title": "The Algebra of Loans in Rust",
+        "link": "https://nadrieril.github.io/blog/2025/12/21/the-algebra-of-loans-in-rust.html",
+        "published": "Mon, 22 Dec 2025 19:25:29 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46357814\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/oura-ring-3-vs-oura-ring-4/",
+        "title": "Oura Ring 3 vs Oura Ring 4: I've tested both smart rings, and the winner is not so obvious",
+        "link": "https://www.zdnet.com/article/oura-ring-3-vs-oura-ring-4/",
+        "published": "Fri, 26 Dec 2025 11:01:05 GMT",
+        "source": "Latest news",
+        "summary": "The Oura Ring 4 is one of the best products I've tested; however, it's also quite expensive. Here's how to decide between the newest model and its predecessor."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-98-inch-tv/",
+        "title": "The best 98-inch TVs of 2025: Cinema-sized and expert tested",
+        "link": "https://www.zdnet.com/article/best-98-inch-tv/",
+        "published": "Fri, 26 Dec 2025 11:00:49 GMT",
+        "source": "Latest news",
+        "summary": "A 98-inch TV can help create a truly cinema-like experience in the comfort of your own home. We've tested the best from brands like Hisense, TCL, and Sony."
+    },
+    {
+        "id": "https://www.zdnet.com/article/oneplus-buds-4-earbuds-review/",
+        "title": "These OnePlus earbuds transported me from my noisy commute, but the price is more wild",
+        "link": "https://www.zdnet.com/article/oneplus-buds-4-earbuds-review/",
+        "published": "Fri, 26 Dec 2025 10:15:44 GMT",
+        "source": "Latest news",
+        "summary": "The OnePlus Buds 4 offer flagship-level active noise cancellation for a budget-friendly price."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/apple-may-launch-its-first-foldable-in-2026-priced-at-around-2000-analyst-ming-chi-kuo/articleshow/126188963.cms",
+        "title": "Apple may launch its first foldable in 2026, priced at around $2,000: Analyst Ming-Chi Kuo",
+        "link": "https://economictimes.indiatimes.com/tech/technology/apple-may-launch-its-first-foldable-in-2026-priced-at-around-2000-analyst-ming-chi-kuo/articleshow/126188963.cms",
+        "published": "Fri, 26 Dec 2025 16:27:47 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Apple is gearing up to unveil its first foldable iPhone as early as next fall. However, the much-awaited iPhone Air 2 has hit a snag, delaying its release until 2027. Anticipation surrounding the foldable device is mounting, with rumors suggesting an official announcement in fall 2026."
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-natgrid-npr-database-privacy-law-enforcement/",
+        "title": "NATGRID Integrates With NPR Database: What It Means for Privacy & Law Enforcement",
+        "link": "https://www.medianama.com/2025/12/223-natgrid-npr-database-privacy-law-enforcement/",
+        "published": "Fri, 26 Dec 2025 11:03:56 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>As the govt links the NATGRID with the National Population Register, it raises data privacy concerns as the police can unearth personal data without registering an FIR, while the NATGRID is not within the RTI ambit. </p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-natgrid-npr-database-privacy-law-enforcement/\">NATGRID Integrates With NPR Database: What It Means for Privacy &amp; Law Enforcement</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
