📚 Auto-update: News data refreshed - 2025-12-26 12:20 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -29718,5 +29718,85 @@
         "published": "Fri, 26 Dec 2025 11:03:56 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>As the govt links the NATGRID with the National Population Register, it raises data privacy concerns as the police can unearth personal data without registering an FIR, while the NATGRID is not within the RTI ambit. </p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-natgrid-npr-database-privacy-law-enforcement/\">NATGRID Integrates With NPR Database: What It Means for Privacy &amp; Law Enforcement</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.wired.com/review/ricoh-gr-iv-camera/",
+        "title": "Ricoh GR IV Review: Everyone's Favorite Pocket Camera Gets Better",
+        "link": "https://www.wired.com/review/ricoh-gr-iv-camera/",
+        "published": "Fri, 26 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Ricoh\u2019s cult-inspiring pocketable camera gets a small update, with important improvements in autofocus and image quality."
+    },
+    {
+        "id": "https://www.wired.com/story/using-a-rowboat-to-walk-on-the-seafloor-like-jack-sparrow/",
+        "title": "Could You Use a Rowboat to Walk on the Seafloor Like Jack Sparrow?",
+        "link": "https://www.wired.com/story/using-a-rowboat-to-walk-on-the-seafloor-like-jack-sparrow/",
+        "published": "Fri, 26 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "In Pirates of the Caribbean, Jack and Will use an overturned dinghy to hold air underwater. Madness or brilliance?"
+    },
+    {
+        "id": "https://www.wired.com/review/sleep-number-p6-smart-bed/",
+        "title": "Sleep Number P6 Smart Bed Review: Advanced and Adaptive",
+        "link": "https://www.wired.com/review/sleep-number-p6-smart-bed/",
+        "published": "Fri, 26 Dec 2025 11:32:00 +0000",
+        "source": "WIRED",
+        "summary": "This legacy brand brings its beds into the modern era with 100 firmness levels and in-depth sleep tracking."
+    },
+    {
+        "id": "https://www.wired.com/story/us-trade-dominance-will-begin-to-crack/",
+        "title": "US Trade Dominance Will Soon Begin to Crack",
+        "link": "https://www.wired.com/story/us-trade-dominance-will-begin-to-crack/",
+        "published": "Fri, 26 Dec 2025 11:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Savvy countries will discover there\u2019s a way to mitigate the harm incurred by Trump\u2019s tariffs\u2014and it\u2019ll boost their own economies while making goods cheaper too."
+    },
+    {
+        "id": "https://www.engadget.com/audio/headphones/how-to-find-lost-airpods-120000144.html?src=rss",
+        "title": "How to find lost AirPods",
+        "link": "https://www.engadget.com/audio/headphones/how-to-find-lost-airpods-120000144.html?src=rss",
+        "published": "Fri, 26 Dec 2025 12:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Losing <a class=\"link\" href=\"https://www.engadget.com/audio/headphones/best-airpods-100041810.html\" target=\"_blank\">AirPods</a> happens to the best of us. They\u2019re small, they slide into couch cushions and they love disappearing into bags or pockets when you least expect it. Luckily, Apple\u2019s <a class=\"link\" href=\"https://support.apple.com/en-us/109020\" target=\"_blank\">Find My</a> system makes it easy to track down misplaced AirPods, whether you dropped the case somewhere or can\u2019t find one of t"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/26/1130318/mit-technology-review-most-popular-stories-2025/",
+        "title": "MIT Technology Review\u2019s most popular stories of 2025",
+        "link": "https://www.technologyreview.com/2025/12/26/1130318/mit-technology-review-most-popular-stories-2025/",
+        "published": "Fri, 26 Dec 2025 12:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "It&#8217;s been a busy and productive year here at MIT Technology Review. We published magazine issues on power, creativity, innovation, bodies, relationships, and security. We hosted 14 exclusive virtual conversations with our editors and outside experts in our subscriber-only series, Roundtables, and held two events on MIT\u2019s campus. And we published hundreds of articles online,&#8230;"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/26/1129301/paint-coating-chemicals-materials-cooling-air-conditioning/",
+        "title": "The paints, coatings, and chemicals making the world a cooler place",
+        "link": "https://www.technologyreview.com/2025/12/26/1129301/paint-coating-chemicals-materials-cooling-air-conditioning/",
+        "published": "Fri, 26 Dec 2025 11:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "It\u2019s getting harder to beat the heat. During the summer of 2025, heat waves knocked out power grids in North America, Europe, and the Middle East. Global warming means more people need air-\u00adconditioning, which requires more power and strains grids. But a millennia-old idea (plus 21st-century tech) might offer an answer: radiative cooling. Paints, coatings,&#8230;"
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-get-more-iphone-storage-for-free/",
+        "title": "8 ways to get more iPhone storage today - and most are free",
+        "link": "https://www.zdnet.com/article/how-to-get-more-iphone-storage-for-free/",
+        "published": "Fri, 26 Dec 2025 12:00:37 GMT",
+        "source": "Latest news",
+        "summary": "Running out of iPhone space? Don't panic-buy a new phone or more iCloud+. Here's how to free up space fast."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/information-tech/coforge-to-acquire-us-based-encora-in-2-35-billion-deal/articleshow/126190011.cms",
+        "title": "Coforge to acquire US-based Encora in $2.35 billion deal",
+        "link": "https://economictimes.indiatimes.com/tech/information-tech/coforge-to-acquire-us-based-encora-in-2-35-billion-deal/articleshow/126190011.cms",
+        "published": "Fri, 26 Dec 2025 17:33:01 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "\u2060IT services \u200cprovider \u200cCoforge said \u200con Friday it \u200bwould \u200bacquire \u200cUS-based \u200dEncora \u200dfrom Advent International at \u200can \u200denterprise value \u200dof $2.35 \u2060billion."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/from-openai-to-nvidia-firms-channel-billions-into-ai-infrastructure-as-demand-booms/articleshow/126189709.cms",
+        "title": "From OpenAI to Nvidia, firms channel billions into AI infrastructure as demand booms",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/from-openai-to-nvidia-firms-channel-billions-into-ai-infrastructure-as-demand-booms/articleshow/126189709.cms",
+        "published": "Fri, 26 Dec 2025 17:13:38 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Nvidia has agreed to license technology from AI startup Groq for use in some of its artificial intelligence chips, marking the chipmaker's largest deal and \u200dunderscoring its push to strengthen competitiveness amid surging demand."
     }
 ]
